--- a/public/add.html
+++ b/public/add.html
@@ -25,6 +25,7 @@
       </div>
     </div>
   </nav>
+  
   <div class="container">
     <h1 class="text-center">Add a new Character</h1>
     <form>
@@ -49,9 +50,11 @@
         <input type="text" class="form-control" id="avatar" name="avatar" aria-describedby="avatarHelp">
         <div id="avatarHelp" class="form-text">Paste in a URL</div>
       </div>
+
       <button type="submit" name="submit">Add Character</button>
     </form>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     const form = $('form')
@@ -73,15 +76,14 @@
       }
 
       $.ajax({
-        url:'/api/character/add',  
+        url: '/api/characters/add',
         method: 'POST',
         data,
-      }).then(response => console.log(response))
-      .catch(err => console.log(err))
-
+      })
+        .then(response => alert('Character Added!'))
+        .catch(err => console.log(err))
     })
+
   </script>
-
-
 </body>
 </html>
